--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
   <script>window.csrf_token = '{{ frappe.session.csrf_token }}';
     if (!window.frappe) window.frappe = {};
 
-    frappe.boot = {{ boot }};
+    // frappe.boot = {{ boot }};
   </script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
